--- a/css/style.css
+++ b/css/style.css
@@ -62,6 +62,7 @@ body {
    kenapa pada body? karena elemen body membungkus semua elemen dari nav section sampai footer
    */
    font-family: 'Poppins';
+   background-color: #805da8;
 }
 
 /*
@@ -135,7 +136,7 @@ nav {
    untuk pengguna vscode silahkan arahkan mouse ke kotak warna di bawah
    untuk mengganti warna sesuai keinginan
    */
-   background-color: #198754;
+   background-color: #522d7c;
 
    /* box-shadow membuat efek bayangan */
    box-shadow: 0 3px 7px -2px #000;
@@ -186,7 +187,7 @@ a.shop {
 
 a.chat {
    margin-right: 30px;
-   background-color: rgb(8, 69, 8);
+   background-color: rgb(206, 96, 6);
    color: #fff;
    padding-top: 5px;
    padding-right: 15px;
@@ -519,7 +520,7 @@ section.contact-us iframe {
 div.kontak {
    width: 30%;
    /* color mengatur warna tulisan */
-   color: green;
+   color: white;
    text-align: center;
    margin-top: 50px;
 }
@@ -528,7 +529,7 @@ div.kontak {
 /* FOOTER */
 
 footer {
-   background-color: #198754;
+   background-color: #522d7c;
    padding-top: 15px;
    padding-bottom: 15px;
    color: #fff;
